# esp32_youtube_series

./: .cproject  .gitignore  .project  CMakeLists.txt  _sdkconfig  gdbinit  sdkconfig  sdkconfig.old
application/BLE/GATT/: _service_base.h  gatts_table.h
application/Ble/: Ble.cpp  Ble.h  CMakeLists.txt
application/Ble/Gatt/: Gatt_Base.h  Gatt_Device_Information.cpp  Gatt_Device_Information.h  Gatt_Hub_Information.cpp  Gatt_Hub_Information.h  Gatt_SPP.cpp  Gatt_SPP.h  Gatt_Time.cpp  Gatt_Time.h
application/Ble/include/: Ble_Includes.h
application/Bluetooth/: Bt_Common.cpp  Bt_Common.h  CMakeLists.txt
application/Bluetooth/include/: Bt_Common_Includes.h
application/BtClassic/: CMakeLists.txt  bt_classic.cpp  bt_classic.h
application/BtClassic/include/: Bt_Classic_Includes.h
application/Gpio/: CMakeLists.txt  Gpio.cpp  Gpio.h
application/Logging/: CMakeLists.txt  Logging.cpp  Logging.h
application/MqttClient/: CMakeLists.txt  MqttClient.cpp  MqttClient.h
application/MqttClient/include/: MqttClient_Includes.h
application/Nvs32/: Nvs32.h  _CMakeLists.txt
application/SntpTime/: CMakeLists.txt  SntpTime.cpp  SntpTime.h
application/TaskMessaging/: CMakeLists.txt  TaskMessaging.cpp  TaskMessaging.h
application/Wifi/: CMakeLists.txt  Kconfig.projbuild  SntpTime.cpp  SntpTime.h  Wifi.cpp  Wifi.h
core/: CMakeLists.txt  partition_table.csv  partition_table.cvs
core/Inc/: TaskCPP.h  TaskNotificationCPP.h  main.h
core/Src/: heap.cpp  main.cpp
esp32_include_path_fix/: FreeRTOS.h  Lock.h  queue.h
